# AdvancedComputerSystem

./: .gitignore  LICENSE  README.md
DSP/: CMakeLists.txt  DSP.cpp  DSP.h  README.md  main.cpp  setup.bat
DSP/cmake/: FindPulseAudio.cmake
DSP/imgui/: CMakeLists.txt
DSP/nativefiledialog/: CMakeLists.txt
Final/: CMakeLists.txt  DSP.h  README.md  benchmark.cpp  benchmark.py  convolve_parallel.py  main.cpp
Final/imgui/imspinner/: imspinner.h
Project 1/: README.md  main.c  main.cc
Project 2/: README.md  mixed.cpp  mixed_fixed.cpp  simd.c  simd.cpp  simd_fixed.cpp  tiled.cpp
Project 2/plotting/: plotting.ipynb  tiled.xlsx
Project 4/: README.md  ctpl_stl.h  main.cpp  test_main.cpp  test_vanilla.cpp  trie.cpp  trie.h  utils.h  vanilla.cpp
Project 4/data/: 100k.txt  abc.txt
